<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="37dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/mmrtext"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="390dp"
            android:autofillHints=""
            android:ems="10"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_email"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_loginBtn"
            android:layout_width="157dp"
            android:layout_height="45dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_btn"
            android:fontFamily="@font/mmrtext"
            android:paddingTop="5dp"
            android:paddingBottom="8dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FAF4F4"
            android:textStyle="bold"
            android:textSize="22sp" />
        <Button
            android:id="@+id/login_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mmrtext"
            android:text="@string/forgot_password"
            android:textColor="#d63447"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@null"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mmrtext"
            android:text="@string/go_back"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@null"
            android:textAlignment="center"/>

    </LinearLayout>
</RelativeLayout>