<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPass">


    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="37dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/mmrtext"
        android:text="Reset Password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/reset_email"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textPrimary" />
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/mmrtext"
        android:paddingTop="5dp"
        android:paddingBottom="8dp"
        android:text="Reset"
        android:textAlignment="center"
        android:textColor="#FAF4F4"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/reset_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_desc"
        android:layout_marginTop="550dp"
        android:textColor="@color/textPrimary"
        android:fontFamily="@font/mmrtext"
        android:textAlignment="center"
        android:textSize="15dp"/>
    <Button
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="620dp"
        android:fontFamily="@font/mmrtext"
        android:text="@string/go_back"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@null"
        android:textAlignment="center"/>
</RelativeLayout>